Add comprehensive npm scripts for TypeScript client
Add the following npm scripts:
- format:check: Validate code formatting without modifying files
- lint:fix: Auto-fix linting issues
- typecheck: Type-check without building (faster feedback)
- watch: Rebuild on file changes for development
- validate: Run all quality checks (typecheck + lint + format:check)
- prepare: Auto-build on npm install (Git hooks integration)

All scripts tested and working:
✅ npm run clean
✅ npm run build
✅ npm run typecheck
✅ npm run lint
✅ npm run lint:fix
✅ npm run format
✅ npm run format:check
✅ npm run validate (runs all checks)
✅ npm test

Also applied prettier formatting to src/client.ts.

--- a/clients/typescript/package.json
+++ b/clients/typescript/package.json
@@ -17,7 +17,13 @@
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 0",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src --ext .ts"
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "typecheck": "tsc --noEmit",
+    "watch": "tsc --watch",
+    "validate": "npm run typecheck && npm run lint && npm run format:check",
+    "prepare": "npm run build"
   },
   "keywords": [
     "llm",
